<resources>
    <string name="app_name">由我主演</string>
    <string name="label_segment_edit">Segment Edit</string>
    <string name="label_transition_edit">转场编辑</string>
    <string name="label_subtitle">字幕编辑</string>
    <string name="label_record_audio">配音编辑</string>
    <string name="label_sound_effect">音效编辑</string>
    <string name="label_bgm">配乐编辑</string>
    <string name="label_music_select">选择配乐</string>
    <string name="label_drama_select">选择故事</string>
    <string name="label_drama_detail">故事详情</string>
    <string name="label_about_us">关于我们</string>
    <string name="label_feed_back">意见反馈</string>
    <string name="label_setting">设置</string>
    <string name="label_share">分享</string>
    <string name="label_drama_edit">故事编排</string>
    <string name="label_image_selected">选择片段</string>
    <string name="label_drama_make">视频编辑</string>
    <string name="label_clip_time_edit">时长编辑</string>
    <string name="label_add_music_bgm">添加音乐</string>
    <string name="label_add_music_effect">添加音效</string>
    <string name="label_detail">详情</string>

    <!--launch-->
    <string name="launch_logo">launch_logo</string>
    <string name="launch_jump">跳过</string>

    <!--main-->
    <string name="main_act">我要主演</string>
    <string name="main_create">我要创作</string>

    <!-- image selected -->
    <string name="image_too_small">请至少选择两个片段</string>

    <!--drama select-->
    <string name="drama_select">选择故事</string>
    <string name="drama_select_advert">广告</string>
    <string name="drama_use">使用故事</string>
    <string name="drama_detail">故事详情</string>
    <string name="drama_people_format">%s人</string>
    <string name="drama_author_format">作者：%s</string>
    <string name="drama_episode">剧集</string>
    <string name="drama_brief">简介</string>
    <string name="drama_recommend">推荐</string>
    <string name="drama_index_format">%02d</string>

    <!-- transition edit -->
    <string name="transition_selected_effect">转场方式</string>
    <string name="transition_selected_segment">选择片段</string>
    <string name="transition_name_no">无</string>
    <string name="transition_name_slide">幻灯片</string>
    <string name="transition_name_wipe">擦出</string>
    <string name="transition_name_dissolve">叠化</string>
    <string name="transition_name_fade">渐变</string>
    
    <!-- clip time edit -->
    <string name="clip_time_edit">编辑时长</string>

    <!-- common -->
    <string name="common_done">Done</string>
    <string name="common_export">导出</string>
    <string name="common_save">保存</string>
    <string name="common_commit">提交</string>
    <string name="common_sure">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_make">制作</string>
    <string name="common_net_error">网络错误</string>
    <string name="common_percent_format">%d%%</string>
    <string name="common_percent_initial">0%</string>
    <string name="common_storage_permission_fail">请在应用权限里面打开读写存储权限</string>
    <string name="common_record_permission_fail">请在应用权限里面打开录音权限</string>

    <!--about us-->
    <string name="label_image">图标</string>
    <string name="about_version_format">v%s</string>

    <!--feedback-->
    <string name="feedback_hint">提出您的意见或建议，我们会努力做得更好哦 ~</string>
    <string name="feedback_success">感谢您的反馈</string>

    <!--setting-->
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_rank">好评鼓励</string>
    <string name="setting_rank_no_app">还没有安装应用市场</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_login_out">退出登录</string>
    <string name="setting_is_clear_cache">是否清除缓存？</string>
    <string name="settings_cache_size_format">%.1fMB</string>
    <string name="settings_clear_cache_success">缓存已清除</string>

    <!--share-->
    <string name="share_export_success">导出成功，已保存至手机相册</string>
    <string name="share_qq">QQ</string>
    <string name="share_wx">微信</string>
    <string name="share_pyq">朋友圈</string>
    <string name="share_more">更多</string>
    <string name="share_wb">微博</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_back">返回首页</string>
    <string name="share_no_activity">你的手机还未安装此应用，请先安装</string>
    <string name="share_to">分享至</string>

    <string name="picker_bottom_sheet_behavior">com.loopeer.bottomimagepicker.PickerBottomBehavior</string>

    <!-- drama make -->
    <string name="drama_make_zip_success">导出成功</string>
    <string name="drama_unzip_success">解压成功</string>
    <string name="drama_series_format">%1$02d/%2$02d</string>
    <string name="drama_export_message">正在导出</string>
    <string name="drama_make_subtitle">字幕</string>
    <string name="drama_make_record">配音</string>
    <string name="drama_make_clip_time">时长</string>
    <string name="drama_make_transition">转场</string>
    <string name="drama_make_music">配乐</string>
    <string name="drama_make_sound">音效</string>

    <!-- subtitle -->
    <string name="subtitle_add">添加字幕</string>
    <string name="subtitle_intput_hint">请输入字幕…</string>

    <!-- record -->
    <string name="record_add">长按开始录音</string>
    <string name="record_add_finish">结束录音</string>

    <!-- bgm -->
    <string name="bgm_add">添加配乐</string>

    <!-- sound -->
    <string name="sound_add">添加音效</string>

    <!-- guide -->
    <string name="guide_btn_text">立即体验</string>

    <!-- music -->
    <string name="music_delete">删除</string>
    <string name="music_empty">快去精选推荐下载更多音乐吧 ~~</string>
    <string name="music_empty_download">去下载</string>
    <string name="music_already_download">已下载</string>
    <string name="music_zero_percent">0%</string>

    <string name="make_drama_next">暂未开放哦，敬请期待~</string>
    <string name="drama_load_fail">加载失败</string>


</resources>
