<?xml version="1.0" encoding="utf-8"?>
<com.loopeer.compatinset.InsetRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background_white"
    android:fitsSystemWindows="@bool/fits_system_windows"
    android:orientation="vertical">

    <com.loopeer.compatinset.InsetLinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="@bool/fits_system_windows"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar"/>
    </com.loopeer.compatinset.InsetLinearLayout>

    <ImageView
        android:id="@+id/img_export"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_below="@+id/container_toolbar"
        android:layout_centerInParent="true"
        android:layout_marginTop="45dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_export_success"/>

    <TextView
        android:id="@+id/txt_export_success"
        style="@style/PhotoDramaText.Primary.larger"
        android:layout_below="@id/img_export"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/xxlarge_padding"
        android:text="@string/share_export_success"/>

    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_export_success"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/divider"
            android:layout_marginLeft="@dimen/xxlarge_padding"
            android:layout_marginRight="@dimen/larger_padding"
            android:layout_weight="1"
            android:background="@color/divider"/>

        <TextView
            style="@style/PhotoDramaText.Primary.large"
            android:layout_centerInParent="true"
            android:text="@string/share_to"/>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/divider"
            android:layout_marginLeft="@dimen/large_padding"
            android:layout_marginRight="@dimen/xxlarger_padding"
            android:layout_weight="1"
            android:background="@color/divider"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_share"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginRight="@dimen/small_padding"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <TextView
            style="@style/PhotoDramaShareIcon"
            android:drawableTop="@drawable/ic_qq"
            android:onClick="onQQClick"
            android:text="@string/share_qq"/>

        <TextView
            style="@style/PhotoDramaShareIcon"
            android:drawableTop="@drawable/ic_wx"
            android:onClick="onWeichatClick"
            android:text="@string/share_wx"/>

        <TextView
            style="@style/PhotoDramaShareIcon"
            android:drawableTop="@drawable/ic_more"
            android:onClick="onMoreClick"
            android:text="@string/share_more"/>
    </LinearLayout>

    <ImageView
        style="@style/PhotoDramaText.Primary.larger"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/share_back"
        android:onClick="onBackToMain"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_share_close"/>
</com.loopeer.compatinset.InsetRelativeLayout>