<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.loopeer.android.photodrama4android.ui.activity.TransitionEditActivity"
        android:orientation="vertical">

        <include
            android:id="@+id/view_toolbar_dark_inset"
            layout="@layout/view_toolbar_dark_inset"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.loopeer.android.photodrama4android.media.MovieMakerTextureView
                android:id="@+id/gl_surface_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:screenRatioX="@integer/gl_screen_x"
                app:screenRatioY="@integer/gl_screen_y"/>

            <ImageView
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onPlayBtnClick"
                android:src="@drawable/ic_play_green_large"
                android:visibility="gone"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_white"
            android:layout_margin="@dimen/large_padding"
            android:text="@string/transition_selected_segment"
            android:textSize="@dimen/text_size_xmedium"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_segment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/text_color_white"
            android:layout_marginLeft="@dimen/small_padding"
            android:layout_marginTop="40dp"
            android:text="@string/transition_selected_effect"
            android:textSize="@dimen/text_size_xmedium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_padding"
            android:layout_marginLeft="@dimen/small_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size_large"
                tools:text="1s"/>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size_large"
                tools:text="1s"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            style="@style/PhotoDramaButton.Blue.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/common_sure"
            android:layout_marginRight="@dimen/small_padding"
            android:layout_marginLeft="@dimen/small_padding"/>

    </LinearLayout>

</layout>
