<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/view_toolbar_dark_inset"
                layout="@layout/view_toolbar_dark_inset"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/black">

                <com.loopeer.android.photodrama4android.media.MovieMakerTextureView
                    android:id="@+id/gl_surface_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:screenRatioX="@integer/gl_screen_x"
                    app:screenRatioY="@integer/gl_screen_y"/>

                <com.loopeer.android.photodrama4android.ui.widget.SubtitleEditRectView
                    android:id="@+id/subtitle_rect_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:screenRatioX="@integer/gl_screen_x"
                    app:screenRatioY="@integer/gl_screen_y"/>

                <ImageView
                    android:id="@+id/btn_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_play_green_large"
                    android:visibility="gone"/>
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/text_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_small"/>

                <TextView
                    android:id="@+id/text_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/large_padding"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_small"/>

            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <com.loopeer.android.photodrama4android.ui.widget.ScrollSelectView
                    android:id="@+id/scrollSelectView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:imageMargin="4dp"
                    app:imageShowHeight="64dp"
                    app:indicatorInLineHeight="28dp"
                    app:indicatorInLineWidth="2dp"
                    app:indicatorWidth="12dp"/>

                <FrameLayout
                    android:id="@+id/btn_play_frame"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/btn_unable_color"
                    android:foreground="?selectableItemBackground"
                    android:onClick="onPlayRectClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/selector_play_white_edit"/>
                </FrameLayout>
            </FrameLayout>

            <ImageView
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="84dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onTextInputClick"
                android:src="@drawable/selector_subtitle_add"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_padding"
                android:text="@string/subtitle_add"
                android:textColor="@color/text_color_tertiary"
                android:textSize="@dimen/text_size_medium"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/text_input_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/subtitle_bg_text_input_color"
            android:orientation="horizontal"
            android:visibility="invisible">

            <EditText
                android:id="@+id/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="66dp"
                android:layout_marginTop="11dp"
                android:layout_weight="1"
                android:background="@drawable/bg_subtitle_input"
                android:hint="@string/subtitle_intput_hint"
                android:lineSpacingExtra="@dimen/line_space"
                android:maxLines="5"
                android:paddingBottom="@dimen/xxsmall_padding"
                android:paddingLeft="@dimen/medium_padding"
                android:paddingRight="@dimen/medium_padding"
                android:paddingTop="@dimen/xxsmall_padding"
                android:textColor="@color/subtitle_text_input_color"
                android:textColorHint="@color/text_color_tertiary"
                android:textSize="@dimen/text_size_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onInputConfirm"
                android:paddingBottom="15dp"
                android:paddingLeft="@dimen/large_padding"
                android:paddingRight="@dimen/large_padding"
                android:paddingTop="15dp"
                android:text="@string/common_sure"
                android:textColor="@color/text_color_secondary"/>

        </RelativeLayout>

    </FrameLayout>


</layout>

